k8s101/Ingress/wip/ingress_sample.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: web-container
          image: gcr.io/google-samples/hello-app:2.0
---
apiVersion: v1
kind: Service
metadata:
  name: web-service
spec:
  selector:
    app: web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8082
  type: NodePort
# ---
# apiVersion: extensions/v1beta1
# kind: Ingress
# metadata:
#   name: hello-ingress 
# spec:
#   rules:
#   - host: hello-test.internal
#     http:
#       paths:
#       - path: /
#         backend:
#           serviceName: web-service 
#           servicePort: 8082

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx-example
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web-service 
            port:
              number: 80
